--- a/InsureYouAI/Views/Category/CreateCategory.cshtml
+++ b/InsureYouAI/Views/Category/CreateCategory.cshtml
@@ -12,7 +12,7 @@
             <h5 class="mb-0">Yeni Sigorta Kategori Girişi</h5>
         </div>
         <form method="post">
-            <label for="Title" class="form-label">Kategori Adı</label>
+            <label for="CategoryName" class="form-label">Kategori Adı</label>
             <input type="text" class="form-control mb-3" asp-for="CategoryName" />
             <br />
             <button type="submit" class="btn btn-primary"> Kategoryi Kaydet </button>
