--- a/InsureYouAI/Views/Category/UpdateCategory.cshtml
+++ b/InsureYouAI/Views/Category/UpdateCategory.cshtml
@@ -11,7 +11,7 @@
         </div>
         <form method="post">
             <input type="hidden" asp-for="CategoryId"/>
-            <label for="Title" class="form-label">Kategori Adı</label>
+            <label for="CategoryName" class="form-label">Kategori Adı</label>
             <input type="text" class="form-control mb-3" asp-for="CategoryName" />
             <br />
             <button type="submit" class="btn btn-success"> Kategoryi Kaydet </button>
