--- a/InsureYouAI/Views/Shared/Components/_AdminLayoutBreadcrumbComponentPartial/Default.cshtml
+++ b/InsureYouAI/Views/Shared/Components/_AdminLayoutBreadcrumbComponentPartial/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
-    <div class="breadcrumb-title pe-3">Tables</div>
+    <div class="breadcrumb-title pe-3">Controller Adı</div>
     <div class="ps-3">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0 p-0">
