Gemini ve Claude AI entegrasyonları yapıldı

--- a/InsureYouAI/Views/Testimonial/CreateTestimonial.cshtml
+++ b/InsureYouAI/Views/Testimonial/CreateTestimonial.cshtml
@@ -8,13 +8,13 @@
 <<div class="card">
     <div class="card-body">
         <div class="d-flex align-items-center">
-            <h5 class="mb-0">Yeni Testimonial Girişi</h5>
+            <h5 class="mb-0">Yeni Referans Girişi</h5>
         </div>
         <form method="post">
             <label for="NameSurname" class="form-label">Ad - Soyad</label>
             <input type="text" class="form-control mb-3" asp-for="NameSurname" />
             <br />
-            <label for="Title" class="form-label">Testimonial Başlık</label>
+            <label for="Title" class="form-label">Ünvan</label>
             <input type="text" class="form-control mb-3" asp-for="Title" />
             <br />
             <label for="CommentDetail" class="form-label">Yorum</label>
