--- a/InsureYouAI/Views/Default/Index.cshtml
+++ b/InsureYouAI/Views/Default/Index.cshtml
@@ -10,288 +10,31 @@
     <!-- header -->
     <header class="header-area header-three">
         @await Component.InvokeAsync("_DefaultHeaderComponentPartial")
-     
-        <div class="header-mid d-none d-md-block pt-25 pb-25">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-2 col-md-12 d-none d-md-block">
-                        <div class="logo">
-                            <a href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-10 col-md-10 text-right d-none d-lg-block">
-                        <div class="header-cta">
-                            <ul>
-                                <li>
-                                    <div class="call-box">
-                                        <div class="icon">
-                                            <i class="fal fa-envelope"></i>
-                                        </div>
-                                        <div class="text">
-                                            <strong>info@gmail.com</strong>
-                                            <span>Email Now</span>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="call-box">
-                                        <div class="icon">
-                                            <i class="fal fa-phone-alt"></i>
-                                        </div>
-                                        <div class="text">
-                                            <strong>+91 854 789-8746</strong>
-                                            <span>Call Now !</span>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <a href="contact.html" class="top-btn">Get A Quote</a>
-                                </li>
 
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="header-sticky" class="menu-area">
-            <div class="container">
-                <div class="second-menu">
-                    <div class="row align-items-center">
-                        <div class="col-lg-2 col-md-12  d-lg-none d-x-none">
-                            <div class="logo">
-                                <a href="index.html"><img src="img/logo/logo.png" alt="logo"></a>
-                            </div>
-                        </div>
-                        <div class="col-xl-11 col-lg-10">
+        @await Component.InvokeAsync("_DefaultHeaderContactComponentPartial")
 
-                            <div class="main-menu">
-                                <nav id="mobile-menu">
-                                    <ul>
-                                        <li class="has-sub">
-                                            <a href="index.html">Home</a>
-                                            <ul>
-                                                <li><a href="index.html">Home Page 01</a></li>
-                                                <li><a href="index-2.html">Home Page 02</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li class="has-sub">
-                                            <a href="services.html">Services</a>
-                                            <ul>
-                                                <li><a href="services.html">Services</a></li>
-                                                <li><a href="single-service.html">Services Details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="projects.html">Case Studies</a></li>
-                                        <li class="has-sub">
-                                            <a href="#">Pages</a>
-                                            <ul>
-                                                <li><a href="pricing.html">Pricing</a></li>
-                                                <li><a href="team.html">Team</a></li>
-                                                <li><a href="faq.html">Faq</a></li>
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact Us</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <div class="col-xl-1 col-lg-2 text-right d-none d-lg-block">
-                            <a href="#" class="menu-tigger"><i class="fal fa-search"></i></a>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile-menu"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @await Component.InvokeAsync("_DefaultNavbarComponentPartial")
+
     </header>
     <!-- header-end -->
     <!-- offcanvas-area -->
-    <div class="offcanvas-menu">
-        <span class="menu-close"><i class="fas fa-times"></i></span>
-        <form role="search" method="get" id="searchform" class="searchform" action="http://wordpress.zcube.in/xconsulta/">
-            <input type="text" name="s" id="search" placeholder="Search" />
-            <button><i class="fa fa-search"></i></button>
-        </form>
+    @await Component.InvokeAsync("_DefaultMobileMenuComponentPartial")
 
-
-        <div id="cssmenu3" class="menu-one-page-menu-container">
-            <ul class="menu">
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="index.html">Home</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="about.html">About Us</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="services.html">Services</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="pricing.html">Pricing </a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="team.html">Team </a></li>
-
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="projects.html">Cases Study</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="blog.html">Blog</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-
-        <div id="cssmenu2" class="menu-one-page-menu-container">
-            <ul id="menu-one-page-menu-12" class="menu">
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#home"><span>+8 12 3456897</span></a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="#howitwork"><span>info@example.com</span></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="offcanvas-overly"></div>
     <!-- offcanvas-end -->
     <!-- main-area -->
     <main>
         <!-- slider-area -->
-        <section id="parallax" class="slider-area fix p-relative">
-            <div class="slider-shape ss-one layer" data-depth="0.10"><img src="img/bg/slider_shape01.png" alt="shape"></div>
-            <div class="slider-shape ss-two layer" data-depth="0.30"><img src="img/bg/slider_shape02.png" alt="shape"></div>
-            <div class="slider-shape ss-three layer" data-depth="0.40"><img src="img/bg/slider_shape03.png" alt="shape"></div>
-            <div class="slider-active" style="background: #fff;">
-                <div class="single-slider slider-bg d-flex align-items-center" style="background-image: url(img/slider/slider_bg.png); background-size: cover;">
-                    <div class="container">
-                        <div class="row justify-content-center align-items-center">
+        @await Component.InvokeAsync("_DefaultSliderComponentPartial")
 
-                            <div class="col-lg-7 col-md-7">
-                                <div class="slider-content s-slider-content mt-100">
-                                    <h5 data-animation="fadeInUp" data-delay=".4s">Welcome <span>Insureyou</span> </h5>
-                                    <h2 data-animation="fadeInUp" data-delay=".4s">Get <span>Insurance</span> For Anything You Need</h2>
-                                    <p data-animation="fadeInUp" data-delay=".6s">Donec vitae libero non enim placerat eleifend aliquam erat volutpat. Curabitur diam ex, dapibus purus sapien, cursus sed nisl tristique, commodo gravida lectus non.</p>
-
-                                    <div class="slider-btn mt-30 mb-105">
-                                        <a href="contact.html" class="btn ss-btn mr-15" data-animation="fadeInLeft" data-delay=".4s">Discover More </a>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-md-5 p-relative">
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="single-slider slider-bg d-flex align-items-center" style="background-image: url(img/slider/slider_bg_02.png); background-size: cover;">
-                    <div class="container">
-                        <div class="row justify-content-center align-items-center">
-
-                            <div class="col-lg-7 col-md-7">
-                                <div class="slider-content s-slider-content mt-100">
-                                    <h5 data-animation="fadeInUp" data-delay=".4s">Welcome <span>Insureyou</span> </h5>
-                                    <h2 data-animation="fadeInUp" data-delay=".4s">Get <span>Insurance</span> For Anything You Need</h2>
-                                    <p data-animation="fadeInUp" data-delay=".6s">Donec vitae libero non enim placerat eleifend aliquam erat volutpat. Curabitur diam ex, dapibus purus sapien, cursus sed nisl tristique, commodo gravida lectus non.</p>
-
-                                    <div class="slider-btn mt-30 mb-105">
-                                        <a href="contact.html" class="btn ss-btn mr-15" data-animation="fadeInLeft" data-delay=".4s">Discover More </a>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-5 col-md-5 p-relative">
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
         <!-- slider-area-end -->
         <!-- about-area -->
-        <section class="about-area about-p pt-120 pb-120 p-relative fix">
-            <div class="container">
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <div class="s-about-img p-relative" data-aos="fade-up" data-aos-duration="1000">
-                            <img src="img/features/about_img_02.png" alt="img">
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-6 col-md-12 col-sm-12">
-                        <div class="about-content s-about-content">
-                            <div class="about-title second-title pb-25">
-                                <h2 data-aos="fade-up" data-aos-duration="1000">We Have Best Insurance For You</h2>
-                            </div>
-                            <p data-aos="fade-up" data-aos-duration="1000">Aliquam ac sem et diam iaculis efficitur. Morbi in enim odio. Nullam quis volutpat est, sed dapibus sapien. Cras condimentum eu velit id tempor. Curabitur purus sapien, cursus sed nisl tristique, commodo vehicula arcu.</p>
-
-                            <div class="about-content3 mt-30" data-aos="fade-up" data-aos-duration="1200">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <ul class="green">
-                                            <li> 24 Month / 24,000km Nationwide Warranty monotone</li>
-                                            <li> Curabitur dapibus nisl a urna congue, in pharetra urna accumsan.</li>
-                                            <li> Customer Rewards Program and excellent technology</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
+        @await Component.InvokeAsync("_DefaultAboutComponentPartial")
         <!-- about-area-end -->
         <!-- service-area -->
-        <section class="service-details pb-60 p-relative fix">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="services-box01 mb-30" data-aos="fade-left">
-                            <div class="number">01</div>
-                            <h5>Insurance Police</h5>
-                            <p>Nullam egestas eros et nulla tempus, vel tempor neque scelerisque. Morbi eleifend convallis turpis, ac scelerisque.</p>
-                            <a href="#" class="mt-15 hover-underline-animation">Learn More</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="services-box01 mb-30" data-aos="fade-up" data-aos-duration="1000">
-                            <div class="number">02</div>
-                            <h5>Direct Payment</h5>
-                            <p>Nullam egestas eros et nulla tempus, vel tempor neque scelerisque. Morbi eleifend convallis turpis, ac scelerisque.</p>
-                            <a href="#" class="mt-15 hover-underline-animation">Learn More</a>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-12 col-sm-12">
-                        <div class="services-box01 mb-30" data-aos="fade-right">
-                            <div class="number">03</div>
-                            <h5>24x7 Support</h5>
-                            <p>Nullam egestas eros et nulla tempus, vel tempor neque scelerisque. Morbi eleifend convallis turpis, ac scelerisque.</p>
-                            <a href="#" class="mt-15 hover-underline-animation">Learn More</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
+        @await Component.InvokeAsync("_DefaultInsureServiceComponentPartial")
         <!-- service-details2-area-end -->
         <!-- video-area -->
-        <section id="video" class="video-area p-relative" data-aos="fade-up" data-aos-duration="1000">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="s-video-wrap" style="background-image:url(img/bg/video-img.png)">
-                            <div class="s-video-content text-center">
-                                <h2>Get Your Digitel Insurance As Per Your Needs</h2>
-                                <h6>
-                                    <a href="https://www.youtube.com/watch?v=7e90gBu4pas" class="popup-video mb-50"><img src="img/bg/play-button.png" alt="circle_right"></a><br>
-                                    Watch Us
-                                </h6>
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
+        @await Component.InvokeAsync("_DefaultTrailerVideoComponentPartial")
         <!-- video-area-end -->
         <!-- services-five-area -->
         <section id="services-05" class="services-05 services-09 pt-240 pb-100 p-relative fix" style=" background-color: #28314b;">
